<resources>
    <string name="app_name">MyBagsBite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_first_name">First Name</string>
    <string name="register_last_name">Last Name</string>
    <string name="register_address">Address</string>
    <string name="register_username">Username</string>
    <string name="reg_password">Password</string>
    <string name="reg_confirm_password">Confirm Password</string>

    <string name="title_activity_home_page">HomePage</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
