<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/reg_layout"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue">

    <LinearLayout
        android:id="@+id/linlaHeaderProgress"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <android.support.v4.widget.ContentLoadingProgressBar
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/register_first_name"
            android:textColor="@color/white"
            android:ems="10"
            android:id="@+id/reg_first_name_field" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:hint="@string/register_last_name"
            android:ems="10"
            android:id="@+id/reg_last_name_field" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:hint="@string/register_address"
            android:textColor="@color/white"
            android:ems="10"
            android:id="@+id/reg_address_field" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/register_username"
            android:textColor="@color/white"
            android:ems="10"
            android:id="@+id/reg_username_field" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:hint="@string/reg_password"
            android:ems="10"
            android:id="@+id/reg_password_field" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:hint="@string/reg_confirm_password"
            android:ems="10"
            android:id="@+id/reg_password_confirm_field" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reg_register_btn"
        android:layout_marginTop="30dp"
        style="@style/LoginActivity"
        />

    <Button
        android:text="Cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reg_cancel_btn"
        android:layout_marginTop="30dp"
        style="@style/LoginActivity"
        />

</LinearLayout>
